Fixed #427 - moved email text input slightly to appear correctly on small screens

--- a/static/css/stripe-modal.css
+++ b/static/css/stripe-modal.css
@@ -218,6 +218,7 @@
 }
 
 .email {
+  margin-top: -4px;
   font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
   font-size: 16px;
   font-weight: 400;
